--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.5.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "cookie": "^0.4.1",
+    "mongoose": "^6.1.9",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "8.8.0",
