--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL =mongodb+srv://amilaq:amila111@cluster0.9bcgm.mongodb.net/pizza?retryWrites=true&w=majority
-ADMIN_USERNAME = admin
-ADMIN_PASSWORD = 123456
-TOKEN = SWdw4CV||663Z{p3|ZXtP%0k6Ejj;F
+MONGO_URL =
+ADMIN_USERNAME = 
+ADMIN_PASSWORD = 
+TOKEN = 
