--- a/.env
+++ b/.env
@@ -1,4 +1,15 @@
 MONGO_URL =mongodb+srv://amilaq:amila111@cluster0.9bcgm.mongodb.net/pizza?retryWrites=true&w=majority
+MONGO_URI =mongodb+srv://amilaq:amila111@cluster0.9bcgm.mongodb.net/pizza?retryWrites=true&w=majority
 ADMIN_USERNAME = admin
 ADMIN_PASSWORD = 123456
 TOKEN = SWdw4CV||663Z{p3|ZXtP%0k6Ejj;F
+
+GOOGLE_ID=129006387625-9tc1vbri9g7tjuc1l7u15jtnpbob0nlj.apps.googleusercontent.com
+GOOGLE_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+SECRET=7c0963ae9f2d22757864bf39584b1736
+JWT_SECRET=7c0963ae9f2d22757864bf39584b1736
+EMAIL_SERVICE=smtp.sendgrid.net
+EMAIL_USERNAME=apikey
+EMAIL_PASSWORD=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
+EMAIL_FROM=amila1.vimukthi@gmail.com
