--- a/package.json
+++ b/package.json
@@ -8,19 +8,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.1",
     "@paypal/react-paypal-js": "^7.5.1",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
-    "bootstrap": "^5.1.3",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "5.1.3",
     "cookie": "^0.4.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.0",
     "mongoose": "^6.1.9",
     "next": "12.0.10",
+    "next-absolute-url": "^1.2.2",
+    "next-auth": "^4.2.1",
+    "next-redux-wrapper": "^7.0.5",
+    "nodemailer": "^6.7.2",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-bootstrap": "^2.1.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "react-social-login-buttons": "^3.6.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
